kubernetes/eks/api/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: agama
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
